...
                                    <constraint firstAttribute="height" constant="60" id="tgO-OD-QK4"/>
                                </constraints>
                                <state key="normal" image="NextArrow">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="384" height="42"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2q-2J-xE9">
                                                <rect key="frame" x="0.0" y="0.0" width="384" height="17"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="76.999999999999972" width="384" height="42"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66x-Rr-ag7">
                                                <rect key="frame" x="0.0" y="0.0" width="384" height="17"/>
                                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
...
                                                <rect key="frame" x="0.0" y="19" width="384" height="23"/>
                                                <subviews>
                                                    <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="MM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJD-CS-tnh">
                                                        <rect key="frame" x="0.0" y="0.0" width="32" height="23"/>
                                                        <constraints>
...
        <scene sceneID="Akv-LJ-ThC">
            <objects>
                <viewController storyboardIdentifier="VehicleInformationViewController" title="Vehicle Information" id="R2d-aa-8Z1" customClass="VehicleInformationViewController" customModule="OpenSpot" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="NJk-dh-CbP" customClass="IQPreviousNextView" customModule="IQKeyboardManagerSwift">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                    <constraint firstAttribute="width" constant="60" id="ka7-HV-WbH"/>
                                </constraints>
                                <state key="normal" image="Check"/>
                                <connections>
                                    <action selector="finishClicked:" destination="R2d-aa-8Z1" eventType="touchUpInside" id="quw-29-h6e"/>
...
                                <rect key="frame" x="55" y="784" width="39" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Skip"/>
                                <connections>
                                    <action selector="skipClicked:" destination="R2d-aa-8Z1" eventType="touchUpInside" id="Iu4-ow-jhA"/>
...
                    </view>
                    <connections>
                        <outlet property="color" destination="F7g-Fm-zBt" id="V4O-X8-KHB"/>
                        <outlet property="license" destination="jrL-xP-J73" id="5Nq-xd-1Vg"/>
                        <outlet property="make" destination="A1w-MR-j4s" id="Wcf-at-nBh"/>
                        <outlet property="model" destination="hqN-RN-VFc" id="S5S-Y4-9gC"/>
                        <outlet property="skipButton" destination="1aU-3C-Rbg" id="X5z-oO-xed"/>
                        <outlet property="state" destination="cSm-D0-MRJ" id="6kf-WT-N6z"/>
                    </connections>
                </viewController>
...
                        <viewLayoutGuide key="safeArea" id="bV8-VX-d8s"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Settings" image="Settings" id="nhf-UY-JWt"/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Subject" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hZJ-PU-TUk">
                                <rect key="frame" x="20" y="113" width="374" height="29"/>
                                <nil key="textColor"/>
...
                                    <constraint firstAttribute="height" constant="50" id="kzN-WW-GYf"/>
                                </constraints>
                                <state key="normal" backgroundImage="SendMail"/>
                                <connections>
                                    <action selector="sendMail:" destination="2C6-eD-WRp" eventType="touchUpInside" id="rmN-kF-dS3"/>
...
