...
    var passCarIndex = 0
    var cameFromVehicleMenu = false
    let db = Firestore.firestore()
    let currentUser = Auth.auth().currentUser
    let validator = Validator()
    
    let statesArr = ["-SELECT-","Alaska", "Alabama", "Arkansas", "American Samoa", "Arizona", "California", "Colorado", "Connecticut","District of Columbia","Delaware", "Florida", "Georgia", "Guam","Hawaii", "Iowa", "Idaho", "Illinois", "Indiana", "Kansas", "Kentucky", "Louisiana","Massachusetts", "Maryland", "Maine", "Michigan", "Minnesota", "Missouri", "Mississippi", "Montana", "North Carolina",
    
    var makeArr = ["-SELECT-","Acura", "Alfa Romeo", "Aston Martin", "Audi",  "Bentley", "BMW", "Buick", "Cadillac", "Chevrolet", "Chrysler", "Dodge","Ferrari", "FIAT","Ford","Freightliner","Genesis","GMC","Honda", "Hyundai","INFINITI","Jaguar","Jeep","Kia","Lamborghini","Land Rover","Lexus","Lincoln","Lotus", "Maserati","MAZDA","McLaren","Mercedes-Benz","MINI","Mitsubishi","Nissan","Porsche","Ram
    
    
    var colorsArr = ["-SELECT-","Black","Blue","Brown","Gold","Green","Red","Silver", "White", "Yellow"]
    
    var carDict: [String: [String]] = ["-SELECT-": ["-SELECT-"],
                                       "Acura": ["-SELECT-","ILX", "MDX", "MDX Sport Hybrid", "NSX", "RDX", "RLX", "RLX Sport Hybrid", "TLX"],
                                       "Alfa Romeo": ["-SELECT-","4C", "4C Spider", "Giulia", "Stelvio"],
                                       "Aston Martin": ["-SELECT-","DB11", "Vanquish S"],
                                       "Audi": ["-SELECT-","A3", "A3 Sportback e-tron", "A4", "A4 allroad", "A5", "A6", "A7", "A8", "e-tron", "Q3", "Q5", "Q7", "Q8", "R8", "RS 3", "RS 5", "RS 7", "S3", "S4", "S5", "S6", "S7", "S8", "SQ5", "TT"],
                                       "Bentley": ["-SELECT-","Bentayga", "Continental", "Flying Spur", "Mulsanne"],
                                       "BMW": ["-SELECT-","2 Series", "3 Series", "4 Series", "5 Series", "6 Series", "7 Series", "i3", "i8", "M2", "M3", "M4", "M5", "M6", "X1", "X2", "X3", "X4", "X5", "X5 M", "X6", "X6 M"],
                                       "Buick": ["-SELECT-","Cascada", "Enclave", "Encore", "Envision", "LaCrosse", "Regal Sportback", "Regal TourX"],
                                       "Cadillac": ["-SELECT-","ATS", "ATS-V", "CT6", "CTS", "CTS-V", "Escalade", "Escalade ESV", "XT4", "XT5", "XTS"],
                                       "Chevrolet": ["-SELECT-","Blazer", "Bolt EV", "Camaro", "City Express", "Colorado Crew Cab", "Colorado Extended Cab", "Corvette", "Cruze", "Equinox", "Express 2500 Cargo", "Express 2500 Passenger", "Express 3500 Cargo", "Express 3500 Passenger", "Impala", "Malibu", "Silverado 1500 Crew Cab", "Silverado 1500 Double Cab", "Silverado 1500 LD Double Cab", "Silver
                                       "Chrysler": ["-SELECT-","300", "Pacifica", "Pacifica Hybrid"],
                                       "Dodge": ["-SELECT-","Challenger", "Charger", "Durango", "Grand Caravan Passenger", "Journey"],
                                       "Ferrari": ["-SELECT-","488 GTB", "488 Spider", "812 Superfast", "California", "F12berlinetta", "GTC4Lusso", "Portofino"],
                                       "FIAT": ["-SELECT-","124 Spider", "500", "500 Abarth", "500c", "500c Abarth", "500e", "500L", "500X"],
                                       "Ford": ["-SELECT-","C-MAX Hybrid", "EcoSport", "Edge", "Escape", "Expedition", "Expedition MAX", "Explorer", "F150 Regular Cab", "F150 Super Cab", "F150 SuperCrew Cab", "F250 Super Duty Crew Cab", "F250 Super Duty Regular Cab", "F250 Super Duty Super Cab", "F350 Super Duty Crew Cab", "F350 Super Duty Regular Cab", "F350 Super Duty Super Cab", "F450 Super Dut
                                       "Freightliner": ["-SELECT-","Sprinter 2500 Cargo", "Sprinter 2500 Crew", "Sprinter 2500 Passenger", "Sprinter 3500 Cargo", "Sprinter 3500XD Cargo", "Sprinter WORKER Cargo"],
                                       "Genesis": ["-SELECT-","G70", "G80", "G90"],
                                       "GMC": ["-SELECT-","Acadia", "Canyon Crew Cab", "Canyon Extended Cab", "Savana 2500 Cargo", "Savana 2500 Passenger", "Savana 3500 Cargo", "Savana 3500 Passenger", "Sierra 1500 Crew Cab", "Sierra 1500 Double Cab", "Sierra 1500 Regular Cab", "Sierra 2500 HD Crew Cab", "Sierra 2500 HD Double Cab", "Sierra 2500 HD Regular Cab", "Sierra 3500 HD Crew Cab", "Sierra 
                                       "Honda": ["-SELECT-","Accord", "Accord Hybrid", "Civic", "Civic Type R", "Clarity Electric", "Clarity Fuel Cell", "Clarity Plug-in Hybrid", "CR-V", "Fit", "HR-V", "Insight", "Odyssey", "Passport", "Pilot", "Ridgeline"],
...
                                       "Nissan": ["-SELECT-","370Z", "Altima", "Armada", "Frontier Crew Cab", "Frontier King Cab", "GT-R", "Kicks", "LEAF", "Maxima", "Murano", "NV1500 Cargo", "NV200", "NV2500 HD Cargo", "NV3500 HD Cargo", "NV3500 HD Passenger", "Pathfinder", "Rogue", "Rogue Sport", "Sentra", "Titan Crew Cab", "Titan King Cab", "TITAN Single Cab", "TITAN XD Crew Cab", "TITAN XD Kin
                                       "Porsche": ["-SELECT-","718 Boxster", "718 Cayman", "911", "Cayenne", "Macan", "Panamera"],
                                       "Ram": ["-SELECT-","1500 Classic Crew Cab", "1500 Classic Quad Cab", "1500 Classic Regular Cab", "1500 Crew Cab", "1500 Quad Cab", "1500 Regular Cab", "2500 Crew Cab", "2500 Mega Cab", "2500 Regular Cab", "3500 Crew Cab", "3500 Mega Cab", "3500 Regular Cab", "ProMaster Cargo Van", "ProMaster City", "ProMaster Window Van"],
                                       "Rolls-Royce": ["-SELECT-","Dawn", "Ghost", "Phantom", "Wraith"],
                                       "smart": ["-SELECT-","fortwo electric drive", "fortwo electric drive cabrio"],
                                       "Subaru": ["-SELECT-","Ascent", "BRZ", "Crosstrek", "Forester", "Impreza", "Legacy", "Outback", "WRX"],
                                       "Tesla": ["-SELECT-","Model 3", "Model S", "Model X", "Model Y", "Roadster"],
                                       "Toyota": ["-SELECT-","4Runner", "86", "Avalon", "Avalon Hybrid", "Camry", "Camry Hybrid", "C-HR", "Corolla", "Corolla Hatchback", "Corolla iM", "Highlander", "Highlander Hybrid", "Land Cruiser", "Mirai", "Prius", "Prius c", "Prius Prime", "RAV4", "RAV4 Hybrid", "Sequoia", "Sienna", "Tacoma Access Cab", "Tacoma Double Cab", "Tundra CrewMax", "Tundra Double Ca
                                       "Volkswagen": ["-SELECT-","Atlas", "Beetle", "e-Golf", "Golf", "Golf Alltrack", "Golf GTI", "Golf R", "Golf SportWagen", "Jetta", "Passat", "Tiguan", "Tiguan Limited"],
                                       "Volvo": ["-SELECT-","S60", "S90", "V60", "V90", "XC40", "XC60", "XC90"]
    ]
    
    
...
