...
    let db = Firestore.firestore()
    let currentUser = Auth.auth().currentUser
    
    override func viewDidLoad() {
        super.viewDidLoad()
        getCarArr()
        self.navigationItem.title = "Vehicles"
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Close", style: .plain, target: self, action:  #selector(dismissViewController))
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(newVehicleViewController))

        vehicleTableView.tableFooterView = UIView()
        vehicleTableView.register(MenuOptionCell.self, forCellReuseIdentifier: "cell")
    }

...
